# erc_dex/erc_dex/api/orders_api.py
@@ -216,7 +216,7 @@ class OrdersApi(object):
         auth_settings = []  # noqa: E501
 
         return self.api_client.call_api(
-            '/orders', 'POST',
+            '/order', 'POST',
             path_params,
             query_params,
             header_params,
